# Unity_Panda_Teleop

./: .gitattributes  .gitignore  README.md
Panda_Teleop/Assets/Materials/: Dark_Grey.mat  TranslucentPreview.mat  Translucent_Red.mat
Panda_Teleop/Assets/Materials/Cubes/: Blue.mat  Green.mat  Light Green.mat  Light Purple.mat  Orange.mat  Pink.mat  Purple.mat  Torquoise.mat
Panda_Teleop/Assets/Prefabs/: PreviewCube.prefab  Target.prefab  Target_v2.prefab
Panda_Teleop/Assets/Resources/: ROSConnectionPrefab.prefab
Panda_Teleop/Assets/Scenes/: Panda_Gaze_Control.unity  Panda_VR_Teleop.unity
Panda_Teleop/Assets/Scripts/: ColorPicker.cs  CubeData.cs  CubeSpawner.cs  CustomGazeInteractor.cs  DatabaseManager.cs  FrankaStatePublisher.cs  GazeProxySelector.cs  GazeSelectionController.cs  GraphController.cs  GridColorController.cs  InitializeFrankaPose.cs  MenuManager.cs  ObjectGlower.cs  PandaMovetoPoint.cs  PandaTrajectoryPlanner.cs  PandaVRTeleoperator.cs  RaySelectionController.cs  TargetPlacement.cs  UIColorManager.cs  UISizeSelector.cs  Unity.Robotics.PickAndPlace.asmdef  XRIHighlightFeedback.cs
Panda_Teleop/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Panda_Teleop/Assets/XR/Settings/: OpenXR Package Settings.asset
Panda_Teleop/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ROS/src/digital_twin_utils/: CMakeLists.txt  README.md  package.xml
ROS/src/digital_twin_utils/scripts/: cube_detector.py  shape_detector.py
ROS/src/panda_moveit/: CMakeLists.txt  README.md  package.xml
ROS/src/panda_moveit/launch/: panda_moveit_service.launch  panda_unity_integration.launch
ROS/src/panda_moveit/msg/: PandaMoveitJoints.msg
ROS/src/panda_moveit/scripts/: panda_mover.py  panda_teleop_server.py  panda_unity_joint_state_publisher.py
ROS/src/panda_moveit/srv/: PandaIKSolver.srv  PandaMoverService.srv  PandaTrajectoryPlanner.srv
plotting_scripts/: data_analysis.py
ros1_docker/: Dockerfile  entrypoint.sh
