<?xml version="1.0"?>
<package format="2">
  <name>digital_twin_utils</name>
  <version>0.1.0</version>
  <description>Utility scripts and tools for digital twin functionality</description>

  <!-- Maintainer info -->
  <maintainer email="your.email@example.com">Your Name</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Author info -->
  <author email="your.email@example.com">Your Name</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Export -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
